Updated attachments are shown as updated, but sent in old version
Evolution 3.38.1-1 (Ubuntu 20.10 with all updates)
When writing emails, you sometimes add an attachment and then edit the file before sending the email. In this case, Evolution shows the updated attachment when you open it from the email editor, but then sends the original attachment.
Steps to reproduce:
- Create a new email
- Create a file, like "test.txt" with one line content
- Attach test.txt to the email
- While the email editor is still open, append a second line to test.txt.
- Now you're not sure whether Evolution will use the old or new version of test.txt, so you double-click/open the attachment from new email editor. The NEW version (with two lines) will be opened in your configured text editor.
- So you think the new version will be sent. Send the email.
- Now look into Sent emails: although the NEW version (with two lines) had been shown when opening the attachment, the OLD version (with one line) was actually sent.
Expected results:
- The new version should be sent.
- Alternatively, the old version should be opened (for instance, in a temporary file) when double-clicking the attachment in the email preview.