I#1463 - Updated attachments are shown as updated, but sent in old version

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1463